--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Vite App</title>
+
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <div id="app"></div>
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
